# Gazer

./: CMakeLists.txt  capture_thread.cpp  capture_thread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  utilities.cpp  utilities.h
